# MiniPlatformer

./: .gitignore  CMakeLists.txt  MiniPlatformer.sln  README.md
MiniPlatformer/: Enemy.cpp  Enemy.h  Entity.h  MiniPlatformer.vcxproj  MiniPlatformer.vcxproj.filters  Player.h  Test.cpp  includes.h
src/: CMakeLists.txt  Enemy.cpp  Entity.cpp  InputHandler.cpp  InputHandler.h  Player.cpp  Test.cpp
